# alfred-whats-my-ip

./: LICENSE  README.md  info.plist  pyproject.toml
scripts/: build.sh  release.sh
src/: main.py  netifaces.py
